Move Pebble extensions to templates.filters and templates.functions